app/assets/stylesheets/user.css.scss
// Place all the styles related to the User controller here.
// They will automatically be included in application.css.
// You can use Sass (SCSS) here: http://sass-lang.com/
$bottom: bottom;
$top: top;
$spacing: 30px;

div,main,input{ 
  outline: none;

}
input:focus {outline:none;}
input {border:0; outline:none;}

header{ 
  background-color: #1f1f1f; 
  position: fixed; 
  top: 0; 
  width: 101%;
  margin-left: -1%; 
  height: 50px;
  z-index: 1001;
}

body {
  background-color: #449BB6;
  margin-bottom: 0px;
}

button {
  outline: 0;
  cursor: pointer;
}

.flat-ui-button {
  border:none;
  color: white;
  background-color: #68C49F;
  font-family: 'lato';
  font-weight: 400;
  font-size: 14px;
  border-radius: 5px;
  padding: 15px;
  padding-left: 80px;
  padding-right: 80px;
  margin-left: 110px;
  margin-top: 20px;
}

#stop-button {
  font-size: 14px;
  font-weight: 400;
  padding-left: 80px !important;
  padding-right: 80px !important;
  margin-left: 15px;
  margin-top: 20px;}

.flat-ui-button:hover {
  background-color: #7BD1AE;
}

%reset-style {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

#progressbar {
  background-color: black;
  border-radius: 8px;
  padding: 3px;
  width: 400px;
}

#progressbar div {
  background-color: #0063C6;
  width: 50%;
  height: 10px;
  border-radius: 5px;
  animation:loadbar 2s;
  -webkit-animation:loadbar 2s;
}

@keyframes loadbar {
  0% {
    width: 0%;
  }
  100% {
    width: 50%;
  }
}

@-webkit-keyframes loadbar {
  0% {
    width: 0%;
  }
  100% {
    width: 50%;
  }
}

#container {
  display: inline-block;
  margin-left: 200px;
  margin-top: 2%;
  background: white;
  width: 950px;
  height: 22px;
  border: 2px solid white;
  border-radius: 10px;
  z-index: 1000;
}

#glass {
  border-radius: 5px;
  width: 950px;
  height: 22px;
  position: relative;
}

#water {
  background-image: url("waves.png");
  background-position: 100% 0%;
  position: absolute;
  left:1px;
  width: 170px;
  height: 22px  ;
  -webkit-transition: all 3s ease-out;
  -moz-transition: all 3s ease-out;
  -o-transition: all 3s ease-out;
  transition: all 3s ease-out;
  -webkit-border-radius: 10px;
  -moz-border-radius: 10px;
  border-radius: 10px;
}

.upvote { 
  width: 0;
  height: 0;
  border-left: 8px solid transparent;
  border-right: 8px solid transparent;
  border-bottom: 15px solid #1D354C;
  position: relative;
  left: 9px;
  top: 8px
}

.downvote { 
  width: 0;
  height: 0;
  border-left: 8px solid transparent;
  border-right: 8px solid transparent;
  border-top: 15px solid #1D354C;
  position: relative;
  left: 9px;
  top: 12px;
}

.addButton{ 
  top: 190px !important;
}

.timerButtonContainer{ 
  background-color: #E1E1E3;
  width: 35px;
  height: 35px;
  border-radius: 35px;
  cursor: pointer;
  position: absolute;
  top: 230px;
  left: 740px;
}

.timerButtonContainer:hover .upvote  { 
  border-bottom: 15px solid white;
}

.timerButtonContainer:hover .downvote { 
  border-top: 15px solid white; 
}

.timerButtonContainer:hover { 
  background-color: #1D354C;
}

.logo { 
  padding: 5px; 
  padding-left: 40px;
  padding-bottom: 17px;
}

.header-buttons { 
  margin-left: 70%;
  display: inline-block;
  color: white;
}

.header-button { 
  margin-left: 5%; 
  display: inline-block;
  margin-bottom: 13px;
  font-weight: 100;
  font-size: 14px;
}

#about { 
  left: 85px;
  width: 56px;
  bottom: 30px;
  position: relative;
  width: 100px;
}

.header-button:hover { 
  cursor: pointer;
}

.progress-bar-container { 
  background-color: #E5E9EE;
  height: 120px;
  margin-left: -7px;
  width: 102%;
  margin-top: 100px;
  margin-bottom: -8px;
  position: fixed;
  bottom: 0;
}

.progress-bar-hashmark { 
  width: 0px;
  background-position: 100% 0%;
  margin-left: 20%;
  font-size: 18px;
  color: #E5E9EE;
  padding-bottom: 8px;
  display: inline-block;
  padding-bottom: 11px;
  position: absolute;
  bottom: -8px;
  z-index: 0;
  font-weight: 100;
}



.progress-bar-hashmark:nth-child(2) { 
  margin-left: 43%;
}

.progress-bar-hashmark:nth-child(3) { 
  margin-left: 70%;
}

.progress-bar-image { 
  position: relative;
  top: 10px;
}
.progress-bar-image-caption { 
  position: relative; 
  top: 25px; 
  font-size: 10px;
  font-family: 'lato';
}

.image-caption-teacup { 
  left: 335px;
}

.image-caption-meditate { 
  left: 465px;
}

.image-caption-snack { 
  left: 635px;
}

.image-caption-bench { 
  left: 830px;
}

#teacup-image { 
  left: 381px; 
}

#meditate-image { 
  left: 510px; 
}

#snack-image { 
  left: 680px;
}

#bench-image { 
  left: 870px;
}



.daily-counter { 
  width: 70px;
  height: 75px;
  background-color: #122F4A;
  position: absolute;
  margin-top: 18px;
  margin-left: 60px;
  border-radius: 6px;
}

.daily-count { 
  background-color: white;
  height: 65%;
  border-radius: 2px;
  text-align: center;
  font-size: 30px;
  font-family: 'lato';
  font-weight: 300;
  color: #122F4A;
  margin-top: 0px;
  padding-top: 5px;
}

.daily-name { 
  text-align: center;
  font-family: 'lato';
  color: white;
}

.overlay, .overlay2 { 
  width: 105%;
  height: 175%;
  background-color: #14304B;
  position: absolute;
  top: -25px;
  left: -8px;
  z-index: 10005;
  opacity: 0.95;
}

.overlay2 { 
  background-color: #6FB18C;
}

.overlay-text { 
  position: absolute;
  top: 200px;
  color: white;
  font-size: 30px;
  font-family: 'Lato';
  font-weight: 100;
  text-align: center;
  left: 50%;
  margin-left: -308px;
}

.overlay-button-yes { 
  position: absolute;
  top: 283px;
  right: 600px;
  position: absolute;
  left: 45%;
  margin-left: -190px;
} 

.overlay-exit { 
  position: absolute;
  top: 6px;
  right: 65px;
  font-size: 50px;
  font-family: sans-serif;
  color: white;
  font-weight: 300;
  cursor: pointer;
}

.overlay-button-no { 
  position: relative;
  top: 303px;
  left: 695px;
  padding-left: 60px;
  padding-right: 60px;
  margin-left: 20px;
  left: 48%;
}
.overlay-image-smiley { 
  margin-left: 40%;
  margin-top: 50px;
  margin-bottom: 50px;
}

.second-overlay-text { 
  top: 300px;
}

